Pequenas modificações, e textos da página mercado_de_juros.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
 										<li><a href="mercado_de_opcoes.html">Mercado de Opções</a></li>
-										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
+										<li><a href="mercado_de_juros.html">Mercado de Juros</a></li>
 									</ul>
 								</li>
 								<li><a href="pricing.html">Preços</a></li>
