--- a/mercado_de_juros.html
+++ b/mercado_de_juros.html
@@ -70,7 +70,7 @@
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
 										<li><a href="mercado_de_opcoes.html">Mercado de Opções</a></li>
-										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
+										<li><a href="mercado_de_juros.html">Mercado de Juros</a></li>
 									</ul>
 								</li>
 								<li><a href="pricing.html">Preços</a></li>
@@ -91,8 +91,9 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Long & Short</h2>
-								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Long & Short</span>
+								<h2>Mercado de Juros</h2>
+								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Mercado de
+										Juros</span>
 								</p>
 							</div>
 						</div>
@@ -104,103 +105,61 @@
 		<div class="colorlib-services">
 			<div class="container">
 				<div class="two-collumns-long-and-short">
-					<div class="row col-md-6 text-center animate-box ">
+					<div class="row col-md-12 text-center animate-box ">
 						<div class="services">
 							<span class="icon">
 								<i class="icon-linegraph"></i>
 							</span>
 							<div class="desc">
-								<h2>Long & Short por Cointegração</h2>
-								<p>O método consiste no cálculo estatístico dos preços das ações em diferentes períodos utilizando modelos de regressões lineares. São realizados testes de estacionariedade do resíduo estatístico proveniente das regressões, assim, opera-se o retorno deste resíduo à média.</p>
+								<h2>Mercado de Juros DI Futuro</h2>
+								<p>Estruture operações de forma segura esperando movimentos nas curvas de juros como os grandes bancos fazem. 
+									Opere diferentes prazos das curvas de juros de maneira intuitiva e fácil! Faça operações de hedge e arbitragem com
+								contratos futuros de DI.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Simulação de Montecarlo</h3>
+								<p>Através da simulação de Montecarlo detecte os melhores pontos a serem operados.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Operações de hedge e arbitragem</h3>
+								<p>Opere estratégias básicas de hedge e arbitragem em contratos de DI Futuro em diferentes pontos da curva de juros.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Curva de Juros</h3>
+								<p>Observe dinamicamente a curva de juros com os principais vencimentos.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6 text-center animate-box">
+						<div class="services">
+							<div class="desc">
+								<h3>Cálculo do DiV one</h3>
+								<p>Cálcule o DiV one e estruture diversas estratégias esperando movimentos na taxa de juros.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 text-center animate-box">
 						<div class="services">
-							<span class="icon">
-								<i class="icon-linegraph"></i>
-							</span>
 							<div class="desc">
-								<h2>Long & Short por Filtro Kalman</h2>
-								<p>Seu propósito é utilizar medições de grandezas realizadas ao longo do tempo e gerar resultados que tendam a se aproximar dos valores reais dos preços das ações. Foi projetado para trabalhar com sistemas dinâmicos e ruidosos semelhantes aos preços negociados das ações.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Busca por Heatmap</h3>
-								<p>Em forma de mapa de calor os pares passam por uma pré classificação quantitativa que fornece um rank que agiliza a busca de operações com o objetivo de reduzir o tempo de análise.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Filtro de Ativos Por Setor</h3>
-								<p>Mesmo que a cointegração aceite ativos de diferentes setores, criamos mais um filtro para auxiliar o investidor na escolha de suas operações.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Pares Favoritos</h3>
-								<p>Salve e gerencie seus pares favoritos, possibilitando fazer um acompanhamento mais centrado naqueles ativos preferidos ou que estejam no momento ideal de entrada.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Desvio Intraday</h3>
-								<p>Através de um gráfico do desvio intraday dos pares acompanhe graficamente a micro tendência do residuo da regressão linear.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Beta Rotation</h3>
-								<p>Mais um indicador facilitador para tomada de decisão que pode ser utilizado nas operações através da análise de sua tendência e volatilidade.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Execução Fracionada</h3>
-								<p>Execute ofertas com lote completo a mercado ou fracionado no desvio pré-configurado.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Ajuste Automático</h3>
-								<p>Esqueça ajustes manuais em pagamento de dividendos, juros sobre capital próprio, bonificações, desdobramentos e agrupamentos. Nossa ferramenta ajustsra as operações abertas automaticamente.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Stop Gain e Loss por Desvio</h3>
-								<p>Além do stop financeiro, configure seus stops gain e loss por desvio padrão. Tenha o total controle sobre a operação.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<div class="desc">
-								<h3>Execução</h3>
-								<p>Execute e tenha o total controle de suas operações na plataforma Metatrader5, aceita nas principais corretoras em todo o mundo.</p>
+								<h3>PU, Duration e Convexidade</h3>
+								<p>Calcule o PU, Duration e Convexidade de suas posições, dimensione o seu risco de forma precisa.</p>
 							</div>
 						</div>
 					</div>
@@ -236,11 +195,12 @@
 							</ul>
 						</p>
 					</div>
-		
+
 					<div class="col-md-3 colorlib-widget">
 						<h4>Algoritmos</h4>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-159888.jpg);">
+							<a href="blog.html" class="blog-img"
+								style="background-image: url(images/pexels-photo-159888.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Long&Short Cointegração</a></h2>
@@ -248,7 +208,8 @@
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-1073765.jpg);">
+							<a href="blog.html" class="blog-img"
+								style="background-image: url(images/pexels-photo-1073765.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Algoritmo de Opções</a></h2>
@@ -256,7 +217,8 @@
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-notebook.jpg);">
+							<a href="blog.html" class="blog-img"
+								style="background-image: url(images/pexels-photo-notebook.jpg);">
 							</a>
 							<div class="desc">
 								<h2><a href="blog.html">Algoritmo de Juros</a></h2>
@@ -264,7 +226,7 @@
 							</div>
 						</div>
 					</div>
-		
+
 					<div class="col-md-3 colorlib-widget">
 						<h4>Contato</h4>
 						<ul class="colorlib-footer-links">
@@ -282,9 +244,10 @@
 							<p>
 								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 								Copyright &copy;
-								<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-								is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-									target="_blank">Colorlib</a>
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
+								template
+								is made with <i class="icon-heart" aria-hidden="true"></i> by <a
+									href="https://colorlib.com" target="_blank">Colorlib</a>
 								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br>
 								Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a>
 							</p>
