--- a/long_and_short.html
+++ b/long_and_short.html
@@ -69,8 +69,8 @@
 									<a href="algoritmos.html">Algoritmos</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
-										<li><a href="mercado_de_opcoes.html">Mercado de Opcões</a></li>
-										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
+										<li><a href="mercado_de_opcoes.html">Mercado de Opções</a></li>
+										<li><a href="mercado_de_juros.html">Mercado de Juros</a></li>
 									</ul>
 								</li>
 								<li><a href="pricing.html">Preços</a></li>
