--- a/mercado_de_opcoes.html
+++ b/mercado_de_opcoes.html
@@ -73,8 +73,8 @@
 										<li><a href="mercado_de_juros.html">Mercado de Juros</a></li>
 									</ul>
 								</li>
-								<li><a href="pricing.html">Preços</a></li>
-								<li><a href="contact.html">Contato</a></li>
+								<li><a href="precos.html">Preços</a></li>
+								<li><a href="contato.html">Contato</a></li>
 							</ul>
 						</div>
 					</div>
