Pequenas correções. Página contato.html, página precos.html.

--- a/precos.html
+++ b/precos.html
@@ -64,13 +64,15 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li class="has-dropdown">
-									<a href="methods.html">Métodos</a>
+									<a href="algoritmos.html">Algoritmos</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
+										<li><a href="mercado_de_opcoes.html">Mercado de Opções</a></li>
+										<li><a href="mercado_de_juros.html">Mercado de Juros</a></li>
 									</ul>
 								</li>
-								<li><a href="pricing.html">Preços</a></li>
-								<li><a href="contact.html">Contato</a></li>								
+								<li><a href="precos.html">Preços</a></li>
+								<li><a href="contato.html">Contato</a></li>
 							</ul>
 						</div>
 					</div>
@@ -96,70 +98,53 @@
 
 		<div class="colorlib-services">
 			<div class="container">
-				<div class="row">
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<span class="icon">
-								<i class="icon-browser"></i>
-							</span>
-							<div class="desc">
-								<h3>Create your own template</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+				<div class="colorlib-pricing" id="price">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
+								<h2>Planos</h2>
+								<p>Fizemos os planos sob medida para você e seu bolso, negocie conosco!</p>
 							</div>
 						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<span class="icon">
-								<i class="icon-download"></i>
-							</span>
-							<div class="desc">
-								<h3>Automatic Backup Data</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<div class="row">
+							<div class="col-md-3 text-center animate-box">
+								<div class="pricing">
+									<h2 class="pricing-heading">Free</h2>
+									<div class="price"><sup class="currency">$</sup>0<small>por mês</small></div>
+									<p>Delay 30 minutos</p>
+									<p>68 ativos</p>
+									<p><a href="#" class="btn btn-primary">Assinar</a></p>
+								</div>
 							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<span class="icon">
-								<i class="icon-layers"></i>
-							</span>
-							<div class="desc">
-								<h3>Page Builder</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<div class="col-md-3 text-center animate-box">
+								<div class="pricing">
+									<h2 class="pricing-heading">Long&Short Cointegração</h2>
+									<div class="price"><sup class="currency">R$</sup>299<small>por mês</small></div>
+									<p>Tempo real</p>
+									<p>68 ativos</p>
+									<p><a href="#" class="btn btn-primary">Assinar</a></p>
+								</div>
 							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<span class="icon">
-								<i class="icon-video"></i>
-							</span>
-							<div class="desc">
-								<h3>Watch tutorial</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<div class="col-md-3 text-center animate-box">
+								<div class="pricing">
+									<h2 class="pricing-heading">Opcões</h2>
+									<div class="price"><sup class="currency">R$</sup>199<small>por mês</small></div>
+									<p>Tempo real</p>
+									<p>15 ativos mais líquidos</p>
+									<p>Execução por Volatilidade</p>
+									<p><a href="#" class="btn btn-primary">Assinar</a></p>
+								</div>
 							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<span class="icon">
-								<i class="icon-gears"></i>
-							</span>
-							<div class="desc">
-								<h3>Help &amp; Support</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 text-center animate-box">
-						<div class="services">
-							<span class="icon">
-								<i class="icon-adjustments"></i>
-							</span>
-							<div class="desc">
-								<h3>Lots of features</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<div class="col-md-3 text-center animate-box">
+								<div class="pricing">
+									<h2 class="pricing-heading">Juros Futuro</h2>
+									<div class="price"><sup class="currency">R$</sup>149<small>por mês</small></div>
+									<p>Cálculo do PU.</p>
+									<p>Cálculo do DiV one</p>
+									<p>Simulação de Montecarlo</p>
+									<p>Curva de Juros</p>
+									<p><a href="#" class="btn btn-primary">Assinar</a></p>
+								</div>
 							</div>
 						</div>
 					</div>
