Retirado assunto em contato.html, acrescentado plano Enterprise.

--- a/precos.html
+++ b/precos.html
@@ -147,6 +147,19 @@
 								</div>
 							</div>
 						</div>
+						</br>
+						<div class="row">
+							<div class="col-md-12 text-center animate-box">
+								<div class="pricing">
+									<h2 class="pricing-heading">Enterprise</h2>
+									<div class="price"><sup class="currency">R$</sup>599<small>por mês</small></div>
+									<p>Long & Short</p>
+									<p>Mercado de Opções</p>
+									<p>Mercado de Juros</p>
+									<p><a href="#" class="btn btn-primary">Assinar</a></p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
