--- a/precos.html
+++ b/precos.html
@@ -111,7 +111,9 @@
 								<div class="pricing">
 									<h2 class="pricing-heading">Free</h2>
 									<div class="price"><sup class="currency">$</sup>0<small>por mês</small></div>
-									<p>Delay 30 minutos</p>
+									<p>Long & Short por Cointegração</p>
+									<p>Atualização final do dia</p>
+									<p>Conta demo</p>
 									<p>68 ativos</p>
 									<p><a href="#" class="btn btn-primary">Assinar</a></p>
 								</div>
