--- a/precos.html
+++ b/precos.html
@@ -171,66 +171,67 @@
 			<div class="container">
 				<div class="row row-pb-md">
 					<div class="col-md-3 colorlib-widget">
-						<h4>About unapp</h4>
-						<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+						<h4>Sobre nós</h4>
+						<p>Somos uma plataforma de tecnologia focada em soluções automatizadas que utilizam algoritmos
+							quantitativos que analisam e processam em tempo real dados do mercado financeiro para gerar
+							informações com alto valor agregado aos nossos parceiros.</p>
 						<p>
 							<ul class="colorlib-social-icons">
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
+								<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<li><a href="#"><i class="icon-telegram"></i></a></li>
+								<li><a href="#"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</p>
 					</div>
 					<div class="col-md-3 colorlib-widget">
-						<h4>Information</h4>
+						<h4>Páginas</h4>
 						<p>
 							<ul class="colorlib-footer-links">
 								<li><a href="#"><i class="icon-check"></i> Home</a></li>
-								<li><a href="#"><i class="icon-check"></i> Gallery</a></li>
-								<li><a href="#"><i class="icon-check"></i> About</a></li>
-								<li><a href="#"><i class="icon-check"></i> Blog</a></li>
-								<li><a href="#"><i class="icon-check"></i> Contact</a></li>
-								<li><a href="#"><i class="icon-check"></i> Privacy</a></li>
+								<li><a href="#"><i class="icon-check"></i> Robôs</a></li>
+								<li><a href="#"><i class="icon-check"></i> Preços</a></li>
+								<li><a href="#"><i class="icon-check"></i> Contato</a></li>
 							</ul>
 						</p>
 					</div>
-
+		
 					<div class="col-md-3 colorlib-widget">
-						<h4>Recent Blog</h4>
+						<h4>Algoritmos</h4>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-1.jpg);">
+							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-159888.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Photoshoot Technique</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Long&Short Cointegração</a></h2>
+								<p class="admin"><span>Lançamento 01/10/19</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-2.jpg);">
+							<a href="blog.html" class="blog-img"
+								style="background-image: url(images/pexels-photo-1073765.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Camera Lens Shoot</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Algoritmo de Opções</a></h2>
+								<p class="admin"><span>Lançamento 01/01/20</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-3.jpg);">
+							<a href="blog.html" class="blog-img"
+								style="background-image: url(images/pexels-photo-notebook.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Imahe the biggest photography studio</a></h2>
-								<p class="admin"><span>30 March 2018</span></p>
+								<h2><a href="blog.html">Algoritmo de Juros</a></h2>
+								<p class="admin"><span>Lançamento 02/01/20</span></p>
 							</div>
 						</div>
 					</div>
-
+		
 					<div class="col-md-3 colorlib-widget">
-						<h4>Contact Info</h4>
+						<h4>Contato</h4>
 						<ul class="colorlib-footer-links">
-							<li>291 South 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li><a href="tel://1234567920"><i class="icon-phone"></i> + 1235 2355 98</a></li>
-							<li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-							<li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+							<li><a href="mailto:contato@youquant.com.br"><i class="icon-envelope"></i>
+									contato@youquant.com.br</a></li>
+							<li><a href="#"><i class="icon-location4"></i> youquant.com.br</a></li>
 						</ul>
 					</div>
 				</div>
@@ -240,10 +241,13 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br> 
-								Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
+								is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+									target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br>
+								Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a>
 							</p>
 						</div>
 					</div>
