--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 animate-box">
-						<span class="play"><a href="https://vimeo.com/channels/staffpicks/93951774" class="pulse popup-vimeo"><i class="icon-play3"></i></a></span>
+						<span class="play"><a href="https://www.youtube.com/channel/youquant" class="pulse popup-vimeo"><i class="icon-play3"></i></a></span>
 					</div>
 				</div>
 			</div>
@@ -247,7 +247,7 @@
 									<p>Opere pelo método quantitativo mais novo do mercado brasileiro, de forma ágil e precisa, através de um controle automático de risco, entradas à mercado com lote completo ou fracionado além de um gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
+							<p><a href="long_and_short.html" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -276,7 +276,7 @@
 									<p>Abra operações por diferenças de spreads ou por diferenças de volatilidade. Monte estratégias com o ativo e proteja sua carteira de maneira simples e intuitiva.</p>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
+							<p><a href="mercado_de_opcoes.html" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -305,7 +305,7 @@
 									<p>Opere diferentes prazos das curvas de juros de maneira intuitiva e fácil! Faça operações de hedge e arbitragem com contratos futuros de DI.</p>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
+							<p><a href="mercado_de_juros.html" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -443,22 +443,24 @@
 					</div>
 					<div class="col-md-3 text-center animate-box">
 						<div class="pricing">
-							<h2 class="pricing-heading">Opcões</h2>
-							<div class="price"><sup class="currency">R$</sup>199<small>por mês</small></div>
+							<h2 class="pricing-heading indisponivel">Opcões</h2>
+							<div class="price indisponivel"><sup class="currency">R$</sup>199<small>por mês</small></div>
 							<p>Tempo real</p>
 							<p>15 ativos mais líquidos</p>
 							<p>Execução por Volatilidade</p>
+							<p>* indisponível no momento</p>
 							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
 					</div>
 					<div class="col-md-3 text-center animate-box">
 						<div class="pricing">
-							<h2 class="pricing-heading">Juros Futuro</h2>
-							<div class="price"><sup class="currency">R$</sup>149<small>por mês</small></div>
-							<p>Cálculo do PU.</p>
+							<h2 class="pricing-heading indisponivel">Juros Futuro</h2>
+							<div class="price indisponivel"><sup class="currency">R$</sup>149<small>por mês</small></div>
+							<p>Cálculo do PU</p>
 							<p>Cálculo do DiV one</p>
 							<p>Simulação de Montecarlo</p>
 							<p>Curva de Juros</p>
+							<p>* indisponível no momento</p>
 							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
 					</div>
