Imagem principal, favicon.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
-
+	<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon.ico">
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -427,7 +427,7 @@
 						<div class="pricing">
 							<h2 class="pricing-heading">Free</h2>
 							<div class="price"><sup class="currency">$</sup>0<small>por mês</small></div>
-							<p>Delay 30 minutos</p>
+							<p>Cotação final do dia</p>
 							<p>68 ativos</p>
 							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
