--- a/mercado_de_opcoes.html
+++ b/mercado_de_opcoes.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
+	<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon.ico">
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
