--- a/algoritmos.html
+++ b/algoritmos.html
@@ -72,7 +72,7 @@
 										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
 									</ul>
 								</li>
-								<li><a href="pricing.html">Preços</a></li>
+								<li><a href="precos.html">Preços</a></li>
 								<li><a href="contact.html">Contato</a></li>
 							</ul>
 						</div>
