--- a/precos.html
+++ b/precos.html
@@ -53,6 +53,19 @@
 		
 	<div class="colorlib-loader"></div>
 
+	<div class="login">
+		<form class="form-inline" role="search">
+			<span class="access-title">Acesse o <b>YouQuant</b></span>
+			<div class="form-group form-margin">
+				<input type="text" class="form-control login-input" placeholder="Usuário" required>
+			</div>
+			<div class="form-group form-margin">
+				<input type="password" class="form-control login-input" placeholder="Senha" required>
+			</div>
+			<button type="submit" class="btn btn-success disabled button-margin">Acessar</button>
+		</form>
+	</div>
+
 	<div id="page">
 		<nav class="colorlib-nav" role="navigation">
 			<div class="top-menu">
