atualização de links

--- a/mercado_de_opcoes.html
+++ b/mercado_de_opcoes.html
@@ -56,15 +56,15 @@
 	<div class="colorlib-loader"></div>
 
 	<div class="login">
-		<form class="form-inline" role="search">
+		<form class="form-inline" role="search" action="https://app.youquant.com.br">
 			<span class="access-title">Acesse o <b>YouQuant</b></span>
-			<div class="form-group form-margin">
+			<!--div class="form-group form-margin">
 				<input type="text" class="form-control login-input" placeholder="Usuário" required>
 			</div>
 			<div class="form-group form-margin">
 				<input type="password" class="form-control login-input" placeholder="Senha" required>
-			</div>
-			<button type="submit" class="btn btn-success disabled button-margin">Acessar</button>
+			</div -->
+			<button type="submit" class="btn btn-success button-margin">Acessar</button>
 		</form>
 	</div>
 
@@ -215,10 +215,10 @@
 							informações com alto valor agregado aos nossos parceiros.</p>
 						<p>
 							<ul class="colorlib-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-instagram"></i></a></li>
-								<li><a href="#"><i class="icon-telegram"></i></a></li>
-								<li><a href="#"><i class="icon-youtube"></i></a></li>
+								<li><a href="https://twitter.com/youquantbr"><i class="icon-twitter"></i></a></li>
+								<li><a href="https://www.instagram.com/youquantbr/"><i class="icon-instagram"></i></a></li>
+								<!--li><a href="#"><i class="icon-telegram"></i></a></li-->
+								<li><a href="https://www.youtube.com/channel/UCDmB_I_P5Z9FQRvbzAhawzA"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</p>
 					</div>
@@ -226,10 +226,10 @@
 						<h4>Páginas</h4>
 						<p>
 							<ul class="colorlib-footer-links">
-								<li><a href="#"><i class="icon-check"></i> Home</a></li>
-								<li><a href="#"><i class="icon-check"></i> Robôs</a></li>
-								<li><a href="#"><i class="icon-check"></i> Preços</a></li>
-								<li><a href="#"><i class="icon-check"></i> Contato</a></li>
+								<li><a href="index.html"><i class="icon-check"></i> Home</a></li>
+								<li><a href="algoritmos.html"><i class="icon-check"></i> Algoritmos</a></li>
+								<li><a href="precos.html"><i class="icon-check"></i> Preços</a></li>
+								<li><a href="contato.html"><i class="icon-check"></i> Contato</a></li>
 							</ul>
 						</p>
 					</div>
@@ -237,27 +237,27 @@
 					<div class="col-md-3 colorlib-widget">
 						<h4>Algoritmos</h4>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-159888.jpg);">
+							<a href="long_and_short.html" class="blog-img" style="background-image: url(images/pexels-photo-159888.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Long&Short Cointegração</a></h2>
-								<p class="admin"><span>Lançamento 01/10/19</span></p>
+								<h2><a href="long_and_short.html">Long&Short por Cointegração</a></h2>
+								<p class="admin"><span>Lançamento 2019</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-1073765.jpg);">
+							<a href="mercado_de_opcoes.html" class="blog-img" style="background-image: url(images/pexels-photo-1073765.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Algoritmo de Opções</a></h2>
-								<p class="admin"><span>Lançamento 01/01/20</span></p>
+								<h2><a href="mercado_de_opcoes.html">Algoritmo de Opções</a></h2>
+								<p class="admin"><span>Lançamento 2020</span></p>
 							</div>
 						</div>
 						<div class="f-blog">
-							<a href="blog.html" class="blog-img" style="background-image: url(images/pexels-photo-notebook.jpg);">
+							<a href="mercado_de_juros.html" class="blog-img" style="background-image: url(images/pexels-photo-notebook.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Algoritmo de Juros</a></h2>
-								<p class="admin"><span>Lançamento 02/01/20</span></p>
+								<h2><a href="mercado_de_juros.html">Algoritmo de Juros</a></h2>
+								<p class="admin"><span>Lançamento 2020</span></p>
 							</div>
 						</div>
 					</div>
