Atualização dos preços

--- a/precos.html
+++ b/precos.html
@@ -125,10 +125,12 @@
 								<div class="pricing">
 									<h2 class="pricing-heading">Free</h2>
 									<div class="price"><sup class="currency">$</sup>0<small>por mês</small></div>
-									<p>Long & Short por Cointegração</p>
+									<p>Módulo Long & Short por Cointegração</p>
+									<p><del>Módulo Opções *</del></p>
+									<p><del>Módulo Juros Futuro *</del></p>
 									<p>Atualização final do dia</p>
-									<p>Conta demo</p>
-									<p>68 ativos</p>
+									<p>Robô de execução para Conta demo</p>
+									<p><small class="text-muted">* previsão 2020</small></p>
 									<p><a href="#" class="btn btn-primary">Assinar</a></p>
 								</div>
 							</div>
@@ -136,35 +138,41 @@
 								<div class="pricing">
 									<h2 class="pricing-heading">Long&Short Cointegração</h2>
 									<div class="price"><sup class="currency">R$</sup>299<small>por mês</small></div>
-									<p>Tempo real</p>
-									<p>68 ativos</p>
+									<p>Tempo real (5 min)</p>
+									<p>Robô de execução para Conta Real</p>
+									<p>Ativos Mercado a vista (IBOV)</p>
+									<p>Suporte Técnico</p>
 									<p><a href="#" class="btn btn-primary">Assinar</a></p>
 								</div>
 							</div>
 							<div class="col-md-3 text-center animate-box">
 								<div class="pricing">
 									<h2 class="pricing-heading">Opcões</h2>
-									<div class="price"><sup class="currency">R$</sup>199<small>por mês</small></div>
-									<p>Tempo real</p>
+									<div class="price"><del><sup class="currency">R$</sup>0<small>por mês</small></del></div>
+									<p>Tempo real (5 min)</p>
 									<p>15 ativos mais líquidos</p>
 									<p>Execução por Volatilidade</p>
-									<p><a href="#" class="btn btn-primary">Assinar</a></p>
+									<p>Suporte Técnico</p>
+									<p><small class="text-muted">* previsão 2020</small></p>
+									<p><a href="#" class="btn disabled btn-primary"><del>Assinar</del></a></p>
 								</div>
 							</div>
 							<div class="col-md-3 text-center animate-box">
 								<div class="pricing">
 									<h2 class="pricing-heading">Juros Futuro</h2>
-									<div class="price"><sup class="currency">R$</sup>149<small>por mês</small></div>
+									<div class="price"><del><sup class="currency">R$</sup>0<small>por mês</small></del></div>
 									<p>Cálculo do PU.</p>
 									<p>Cálculo do DiV one</p>
 									<p>Simulação de Montecarlo</p>
 									<p>Curva de Juros</p>
-									<p><a href="#" class="btn btn-primary">Assinar</a></p>
+									<p>Suporte Técnico</p>
+									<p><small class="text-muted">* previsão 2020</small></p>
+									<p><a href="#" class="btn disabled btn-primary"><del>Assinar</del></a></p>
 								</div>
 							</div>
 						</div>
 						</br>
-						<div class="row">
+						<!--div class="row">
 							<div class="col-md-12 text-center animate-box">
 								<div class="pricing">
 									<h2 class="pricing-heading">Enterprise</h2>
@@ -172,10 +180,10 @@
 									<p>Long & Short</p>
 									<p>Mercado de Opções</p>
 									<p>Mercado de Juros</p>
-									<p><a href="#" class="btn btn-primary">Assinar</a></p>
+									<p><a href="#" class="btn disabled btn-primary">Assinar</a></p>
 								</div>
 							</div>
-						</div>
+						</div-->
 					</div>
 				</div>
 			</div>
