--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-						<h2>Preços</h2>
+						<h2>Planos</h2>
 						<p>Fizemos os planos sob medida para você e seu bolso, negocie conosco!</p>
 					</div>
 				</div>
@@ -441,8 +441,12 @@
 						<div class="pricing">
 							<h2 class="pricing-heading">Free</h2>
 							<div class="price"><sup class="currency">$</sup>0<small>por mês</small></div>
-							<p>Cotação final do dia</p>
-							<p>68 ativos</p>
+							<p>Módulo Long & Short por Cointegração</p>
+							<p><del>Módulo Opções *</del></p>
+							<p><del>Módulo Juros Futuro *</del></p>
+							<p>Atualização final do dia</p>
+							<p>Robô de execução para Conta demo</p>
+							<p><small class="text-muted">* previsão 2020</small></p>
 							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
 					</div>
@@ -450,35 +454,52 @@
 						<div class="pricing">
 							<h2 class="pricing-heading">Long&Short Cointegração</h2>
 							<div class="price"><sup class="currency">R$</sup>299<small>por mês</small></div>
-							<p>Tempo real</p>
-							<p>68 ativos</p>
+							<p>Tempo real (5 min)</p>
+							<p>Robô de execução para Conta Real</p>
+							<p>Ativos Mercado a vista (IBOV)</p>
+							<p>Suporte Técnico</p>
 							<p><a href="#" class="btn btn-primary">Assinar</a></p>
 						</div>
 					</div>
 					<div class="col-md-3 text-center animate-box">
 						<div class="pricing">
-							<h2 class="pricing-heading indisponivel">Opcões</h2>
-							<div class="price indisponivel"><sup class="currency">R$</sup>199<small>por mês</small></div>
-							<p>Tempo real</p>
+							<h2 class="pricing-heading">Opcões</h2>
+							<div class="price"><del><sup class="currency">R$</sup>0<small>por mês</small></del></div>
+							<p>Tempo real (5 min)</p>
 							<p>15 ativos mais líquidos</p>
 							<p>Execução por Volatilidade</p>
-							<p>* indisponível no momento</p>
-							<p><a href="#" class="btn btn-primary">Assinar</a></p>
+							<p>Suporte Técnico</p>
+							<p><small class="text-muted">* previsão 2020</small></p>
+							<p><a href="#" class="btn disabled btn-primary"><del>Assinar</del></a></p>
 						</div>
 					</div>
 					<div class="col-md-3 text-center animate-box">
 						<div class="pricing">
-							<h2 class="pricing-heading indisponivel">Juros Futuro</h2>
-							<div class="price indisponivel"><sup class="currency">R$</sup>149<small>por mês</small></div>
-							<p>Cálculo do PU</p>
+							<h2 class="pricing-heading">Juros Futuro</h2>
+							<div class="price"><del><sup class="currency">R$</sup>0<small>por mês</small></del></div>
+							<p>Cálculo do PU.</p>
 							<p>Cálculo do DiV one</p>
 							<p>Simulação de Montecarlo</p>
 							<p>Curva de Juros</p>
-							<p>* indisponível no momento</p>
-							<p><a href="#" class="btn btn-primary">Assinar</a></p>
+							<p>Suporte Técnico</p>
+							<p><small class="text-muted">* previsão 2020</small></p>
+							<p><a href="#" class="btn disabled btn-primary"><del>Assinar</del></a></p>
 						</div>
 					</div>
 				</div>
+				</br>
+				<!--div class="row">
+					<div class="col-md-12 text-center animate-box">
+						<div class="pricing">
+							<h2 class="pricing-heading">Enterprise</h2>
+							<div class="price"><sup class="currency">R$</sup>599<small>por mês</small></div>
+							<p>Long & Short</p>
+							<p>Mercado de Opções</p>
+							<p>Mercado de Juros</p>
+							<p><a href="#" class="btn disabled btn-primary">Assinar</a></p>
+						</div>
+					</div>
+				</div-->
 			</div>
 		</div>
 
