--- a/contato.html
+++ b/contato.html
@@ -174,10 +174,10 @@
 							informações com alto valor agregado aos nossos parceiros.</p>
 						<p>
 							<ul class="colorlib-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-instagram"></i></a></li>
-								<li><a href="#"><i class="icon-telegram"></i></a></li>
-								<li><a href="#"><i class="icon-youtube"></i></a></li>
+								<li><a href="https://twitter.com/youquantbr"><i class="icon-twitter"></i></a></li>
+								<li><a href="https://www.instagram.com/youquantbr/"><i class="icon-instagram"></i></a></li>
+								<!--li><a href="#"><i class="icon-telegram"></i></a></li-->
+								<li><a href="https://www.youtube.com/channel/UCDmB_I_P5Z9FQRvbzAhawzA"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</p>
 					</div>
